--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,14 @@ body {
     letter-spacing: 0.03em;
     color: var(--title-text-color)
 }
+    @keyframes slide {
+        0% {
+            transition: transformY(0%);
+        }
+        100%{
+            transition: transformY(100%);
+        }
+    }
 p, h1, h2, h3, h4{
     margin-top: 0;
     margin-bottom: 0;
@@ -39,7 +47,6 @@ img {
     padding-right: 15px;
     margin: 0 auto;    
 }
-
 
 .header-nav {
     display: flex;
@@ -91,12 +98,30 @@ img {
 .header-link {
     margin-right: 93px;
 }
-
+.header-item-link {
+    transition: color 250ms cubic-bezier (0.4, 0, 0.2, 1);
+}
 .header-item-link:hover,
 .header-item-link:focus,
 .auto-nav-item:hover,
 .auto-nav-item:focus  {
     color: var(--accent-color); 
+}
+.item{
+    position: relative;
+}
+.header-nav-list .current{
+    color: var(--accent-color)
+}
+.item .current::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    width: 100%;
+    left: 0;
+    background-color: var(--accent-color);
+    border: 2px solid;
+    border-radius: 2px;
 }
 
  /* Contacts*/
@@ -109,7 +134,9 @@ img {
     margin-left: 50px;
 }
 
-.auto-nav-item {
+.auto-nav-item { 
+    transition: color 250ms cubic-bezier (0.4, 0, 0.2, 1);
+    
     display: flex;
     align-items: center;
     font-weight: 500;
@@ -151,6 +178,49 @@ img {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: var(--third-text-color);
 }
+.backdrop {
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 528px;
+    min-height: 581px;
+    
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+.close {
+    outline: none;
+    border: none; 
+    background-color: #ffffff;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 8px;
+    right: 8px;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);   
+}
 
 .hero-button {  
     display: flex;
@@ -170,6 +240,9 @@ img {
     color: var(--third-text-color);
     background-color: var(--accent-color);
     cursor: pointer;
+}
+.hero .link {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .hero .link:hover,
@@ -216,8 +289,6 @@ img {
 .icon-animations .features-text {
     width: 100% ;
 }
-.features-icon {
-}
 
 .icon-class  {
     display: flex;
@@ -228,7 +299,6 @@ img {
     height: 120px;
 }
 
-
 /* ---work and team---*/
 
 .work {
@@ -238,7 +308,27 @@ img {
     display: flex;
 }
 .work-list .picture:not(:last-child){
-    margin-right: 30px;
+    margin-right: 30px;   
+}
+.picture {
+    position: relative;
+}
+.work-text {
+    position: absolute;
+    bottom: 0;
+    min-width: 370px;
+    min-height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    background: rgba(47, 48, 58, 0.8);
+    color: var(--third-text-color);
     
 }
 
@@ -247,7 +337,7 @@ img {
     margin-bottom: 50px;
     font-weight: bold;
     font-size: 36px;
-    line-height: 42px;
+    line-height: 1.16;
     text-align: center;
     color: var(--title-text-color);
 }
@@ -313,10 +403,13 @@ img {
 }
 .social-icon{
     fill: #AFB1B8;
-
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .social-link {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     width: 100%;
     height: 100%;
     display: flex;
@@ -363,9 +456,12 @@ img {
 }
 .clients-icon{
    fill:  #AFB1B8; 
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .clients-link {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     width: 100%;
     height: 100%;
     display: flex;
@@ -448,8 +544,11 @@ img {
 }
 .join-icon{
     fill: #FFFFFF;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .join-link {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 100%;
     display: flex;
@@ -474,12 +573,13 @@ img {
     background: #FFFFFF;
 }
 .portfolio-list{
+    
     display: flex;
     margin-bottom: 50px;
     justify-content: center;
 }
 
-.portfolio-button{
+.portfolio-button{   
     padding: 6px 22px;
     margin-right: 8px;
 
@@ -494,20 +594,66 @@ img {
     border: transparent;
     cursor: pointer;
 }
+.portfolio-list .link{ 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .portfolio-list .link:hover, 
 .portfolio-list .link:focus {
     color: var(--third-text-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.portfolio-img .gallery-pic:hover,
-.portfolio-img .gallery-pic:focus {
-    background: #FFFFFF;
+
+.overlay-text{
+    position: relative;
+    width: 100%;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    animation-name: slide;
+    animation-duration: 250ms;
+    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    overflow: hidden;
+}
+.overlay-text::before {
+    display: inline-block;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: translateY(calc (-50% + 30px));
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.picture-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 63px 24px;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+    background-color: rgba(33, 150, 243, 0.9);   
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
+    opacity: 0;
+    overflow: auto;
+}
+.overlay-text:hover::before{
+    transform: translateY(-100%);
+   /* opacity: 0;*/
+}
+.overlay-text:hover .picture-text {
+    opacity: 1;
+    transform: translateY(0%);
+
 }
 
 .gallery-content{
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     box-sizing: border-box;
     padding: 20px 24px;
     border-bottom: 1px solid #EEEEEE;
@@ -516,21 +662,28 @@ img {
     width: 370px;
 }
 .portfolio-img {
+    transition: background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier (0.4, 0, 0.2, 1);
+
     margin: 0;
     display: flex;
     flex-wrap: wrap;
     margin-top: -30px;
     margin-left: -30px;
-
 }
 
 .gallery-pic{
+    transition: background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier (0.4, 0, 0.2, 1);
+
     width: 370px;
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc(100% / 3 - 30px);
 }
-
+.portfolio-img .gallery-pic:hover,
+.portfolio-img .gallery-pic:focus {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 .portfolio-item {
     margin-bottom: 4px;
