--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,12 @@
 }
 body {
     margin: 0;
-
     background-color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
     color: var(--title-text-color)
 }
-    @keyframes slide {
-        0% {
-            transition: transformY(0%);
-        }
-        100%{
-            transition: transformY(100%);
-        }
-    }
+  
 p, h1, h2, h3, h4{
     margin-top: 0;
     margin-bottom: 0;
@@ -99,15 +91,17 @@ img {
     margin-right: 93px;
 }
 .header-item-link {
-    transition: color 250ms cubic-bezier (0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-item-link:hover,
-.header-item-link:focus,
+.header-item-link:focus {
+    color: var(--accent-color); 
+}
 .auto-nav-item:hover,
 .auto-nav-item:focus  {
     color: var(--accent-color); 
 }
-.item{
+.item {
     position: relative;
 }
 .header-nav-list .current{
@@ -133,9 +127,8 @@ img {
 .auto-nav .item +.item {
     margin-left: 50px;
 }
-
 .auto-nav-item { 
-    transition: color 250ms cubic-bezier (0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     display: flex;
     align-items: center;
@@ -149,10 +142,6 @@ img {
     display: inline-block;
     margin-right: 10px;
     fill: currentColor;
-}
-.auto-nav-item:hover,
-.auto-nav-item:focus   {
-    color: var(--accent-color); 
 }
 
 /* ---hero---*/
@@ -207,8 +196,7 @@ img {
     border-radius: 4px;
 }
 .close {
-    outline: none;
-    border: none; 
+    cursor: pointer;  
     background-color: #ffffff;
     width: 30px;
     height: 30px;
@@ -221,6 +209,7 @@ img {
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);   
 }
+
 
 .hero-button {  
     display: flex;
@@ -420,11 +409,14 @@ img {
 }
 
 .social-link:hover,
-.social-link:focus,
+.social-link:focus{
+    background-color: var(--accent-color);
+
+}
+
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
     fill: var(--third-text-color);
-    background-color: var(--accent-color);
 }
 /* ---- Clients---*/
 .clients {
@@ -558,12 +550,14 @@ img {
     background-color: rgba(255, 255, 255, 0.1);
 }
 .join-link:hover,
-.join-link:focus,
+.join-link:focus {
+    background-color: var(--accent-color);
+}
+
 .join-link:hover .join-icon,
 .join-link:focus .join-icon {
     cursor: pointer;
     fill: #FFFFFF;
-    background-color: var(--accent-color);
 }
 
 /* Portfolio */
@@ -606,13 +600,8 @@ img {
 
 .overlay-text{
     position: relative;
-    width: 100%;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    animation-name: slide;
-    animation-duration: 250ms;
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     overflow: hidden;
+
 }
 .overlay-text::before {
     display: inline-block;
@@ -620,10 +609,7 @@ img {
     content: '';
     width: 100%;
     height: 100%;
-    opacity: 0;
-    transform: translateY(calc (-50% + 30px));
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .picture-text {
@@ -639,17 +625,11 @@ img {
     background-color: rgba(33, 150, 243, 0.9);   
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
-    opacity: 0;
     overflow: auto;
 }
-.overlay-text:hover::before{
-    transform: translateY(-100%);
-   /* opacity: 0;*/
-}
-.overlay-text:hover .picture-text {
-    opacity: 1;
-    transform: translateY(0%);
 
+.overlay-text:hover .picture-text {
+    transform: translateY(0%);
 }
 
 .gallery-content{
@@ -662,7 +642,7 @@ img {
     width: 370px;
 }
 .portfolio-img {
-    transition: background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier (0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     margin: 0;
     display: flex;
@@ -672,8 +652,7 @@ img {
 }
 
 .gallery-pic{
-    transition: background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier (0.4, 0, 0.2, 1);
-
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 370px;
     margin-left: 30px;
     margin-top: 30px;
